<resources>
    <string name="app_name">agenda</string>
    <string name="criar_nova_conta">Criar nova conta</string>
    <string name="manter_logado">Manter logado</string>
    <string name="logar">Logar</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="icon_password">icon_password</string>
    <string name="icon_email">icon_email</string>
    <string name="logo_agenda">logo_agenda</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="confirmar">Confirmar</string>
    <string name="novo_agendamento">Novo agendamento</string>
    <string name="agendamento_da_semana">Agendamento da semana</string>
    <string name="back">back</string>
    <string name="tarefa">Tarefa</string>
    <string name="Valor">Valor</string>
    <string name="date">Data</string>
    <string name="time">Horas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Concluido">Concluído</string>
</resources>