<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde_201"
    tools:context=".fragments.Login">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="280dp"
        android:layout_height="255dp"
        android:contentDescription="@string/logo_agenda"
        android:src="@drawable/ic_logo_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/vw_new_account_email"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_input"
        android:elevation="4dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/icon_email"
            android:src="@drawable/ic_email_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/email"
            android:textColorHint="#bbb"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:autofillHints="Email" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vw_password"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:elevation="4dp"
        android:background="@drawable/bg_input"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_new_account_email">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/icon_password"
            android:src="@drawable/ic_password_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/password"
            android:textColorHint="#bbb"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:ems="10"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="129dp"
            tools:layout_editor_absoluteY="403dp"
            android:autofillHints="Password" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_password" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manter_logado"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toTopOf="@+id/checkBox" />

    <Button
        android:id="@+id/btm_login"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:text="@string/logar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.212" />

    <TextView
        android:id="@+id/tv_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:text="@string/criar_nova_conta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btm_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:text="@string/esqueci_minha_senha"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_new_account" />

</androidx.constraintlayout.widget.ConstraintLayout>