<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAccount"
    android:background="@color/verde_201"
    >

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="280dp"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo_agenda"
        android:src="@drawable/ic_logo_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_baseline_keyboard_backspace_24"
        app:layout_constraintStart_toStartOf="@+id/img_logo"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <LinearLayout
        android:id="@+id/vw_name"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_input"
        android:elevation="4dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/icon_email"
            android:src="@drawable/ic_person_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_new_account_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/nome"
            android:textColorHint="#bbb"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:autofillHints="Email" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vw_new_account_email"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_input"
        android:elevation="4dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_name">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/icon_email"
            android:src="@drawable/ic_email_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_new_account_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/email"
            android:textColorHint="#bbb"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:autofillHints="Email" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vw_password"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:elevation="4dp"
        android:background="@drawable/bg_input"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_new_account_email">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/icon_password"
            android:src="@drawable/ic_password_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_new_account_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/password"
            android:textColorHint="#bbb"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:ems="10"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="129dp"
            tools:layout_editor_absoluteY="403dp"
            android:autofillHints="Password" />

    </LinearLayout>

    <Button
        android:id="@+id/btm_new_user_confirm"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:text="@string/confirmar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_password" />

</androidx.constraintlayout.widget.ConstraintLayout>