<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.updateSchedule"
    android:background="@color/verde_201">


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_agenda"
        android:src="@drawable/ic_logo_vertical"
        app:layout_constraintStart_toEndOf="@+id/img_update_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_update_back"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_baseline_keyboard_backspace_24"
        app:layout_constraintBottom_toBottomOf="@+id/img_logo"
        app:layout_constraintStart_toStartOf="@+id/vw_schedule_update_name"
        app:layout_constraintTop_toTopOf="@+id/img_logo" />

    <LinearLayout
        android:id="@+id/vw_schedule_update_name"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_input"
        android:elevation="4dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/icon_email"
            android:src="@drawable/ic_person_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_schedule_update_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:autofillHints="Email"
            android:hint="@string/nome"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="#bbb"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vw_schedule_update_email"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_input"
        android:elevation="4dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_schedule_update_name">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="2dp"
            android:contentDescription="@string/icon_email"
            android:src="@drawable/ic_tarefa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_new_schedule_task"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/tarefa"
            android:textColorHint="#bbb"
            android:textColor="@color/black"
            android:inputType="text"
            android:textSize="18sp"
            android:autofillHints="Email"
            tools:ignore="TextFields" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vw_schedule_update_amount"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_input"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_schedule_update_email">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/icon_password"
            android:src="@drawable/ic_real_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_schedule_update_amount"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:autofillHints="Password"
            android:ems="10"
            android:hint="@string/Valor"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textColorHint="#bbb"
            android:textSize="18sp"
            tools:ignore="TextFields"
            tools:layout_editor_absoluteX="129dp"
            tools:layout_editor_absoluteY="403dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vw_schedule_update_date"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_input"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_schedule_update_amount">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/icon_password"
            android:src="@drawable/ic_calendar_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_schedule_update_date"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/date"
            android:inputType="date"
            android:textColor="@color/black"
            android:textColorHint="#bbb"
            android:textSize="18sp"
            tools:ignore="TextFields"
            tools:layout_editor_absoluteX="129dp"
            tools:layout_editor_absoluteY="403dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vw_schedule_update_hour"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_input"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_schedule_update_date">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/icon_password"
            android:src="@drawable/ic_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_schedule_update_hour"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/time"
            android:inputType="time"
            android:textColor="@color/black"
            android:textColorHint="#bbb"
            android:textSize="18sp"
            tools:ignore="TextFields"
            tools:layout_editor_absoluteX="129dp"
            tools:layout_editor_absoluteY="403dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btm_schedule_confirm"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/vinho_200"
        android:text="@string/confirmar"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_schedule_update_hour" />

</androidx.constraintlayout.widget.ConstraintLayout>