<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".principal"
    app:layoutDescription="@xml/activity_principal_scene"
    android:background="@color/verde_201"
    >

    <View
        android:id="@+id/vwToolbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="@color/verde_201"
        app:layout_constraintBottom_toTopOf="@id/rvContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/logo_agenda"
        app:srcCompat="@drawable/ic_logo_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btm_New_schedule"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:text="@string/novo_agendamento"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/img_logo"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/agendamento_da_semana"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/btm_New_schedule"
        app:layout_constraintTop_toBottomOf="@+id/btm_New_schedule" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
         />
    <View
        android:id="@+id/spacer"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginTop="16dp"

        />

</androidx.constraintlayout.motion.widget.MotionLayout>